--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -27,11 +27,22 @@ body {
     margin-bottom: 20px;
 }
 .header img {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
+    filter: grayscale(100%);
     object-fit: cover;
-    border: 3px solid #ddd;
+    /* border: 1px solid #000000; */
+    transition: all 0.8s;
+}
+.header img:hover{
+    filter: grayscale(0%);
+    border-radius: 50%;
+    border: 3px solid #ffffff;
+
+    width: 250px;
+    height: 250px;
+    transition: all 0.8s;
 }
 .header h1 {
     margin: 10px 0;
